--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -76,25 +76,25 @@
                                 <div id="navbarContent" class="collapse navbar-collapse">
                                 <ul class="navbar-nav ">
                                   <li class="nav-item  text-center  ml-5 mr-4 ">
-                                    <a class=" nav-link " href="carrousel_principal"><img class="imageConsole trans" src="/images/imagesAtari/atariVCS2600.jpeg" alt="site logo" /></br>Jeux ATARI VCS</a>
+                                    <a class=" nav-link " href="carrousel_principal?console=atari"><img class="imageConsole trans" src="/images/imagesAtari/atariVCS2600.jpeg" alt="site logo" /></br>Jeux ATARI VCS</a>
                                     </li>
                                     <li class="nav-item text-center mr-4" >  
-                                    <a class=" nav-link " href="carrousel_principal"><img class="imageConsole trans" src="/images/imagesNes/nes.jpg" alt="site logo" /></br>Jeux NES</a>
+                                    <a class=" nav-link " href="carrousel_principal?console=nes"><img class="imageConsole trans" src="/images/imagesNes/nes.jpg" alt="site logo" /></br>Jeux NES</a>
                                   </li>
                                   <li class="nav-item text-center mr-3 ">
-                                  <a class="nav-link " href="carrousel_principal"><img class="imageConsole trans"  src="/images/imagesSuperNintendo/superNintendo.jpg" alt="site logo" /></br> Jeux Super </br>Nintendo</a>
+                                  <a class="nav-link " href="carrousel_principal?console=nintendo"><img class="imageConsole trans"  src="/images/imagesSuperNintendo/superNintendo.jpg" alt="site logo" /></br> Jeux Super </br>Nintendo</a>
                                   </li>
                                   <li class="nav-item text-center mr-4">
-                                  <a class="nav-link " href="carrousel_principal"><img class="imageConsole trans" src="/images/imagesMasterSystem/masterSystem.jpg" alt="site logo" /></br>Jeux</br>Master Système</a>
+                                  <a class="nav-link " href="carrousel_principal?console=masterSystem"><img class="imageConsole trans" src="/images/imagesMasterSystem/masterSystem.jpg" alt="site logo" /></br>Jeux</br>Master Système</a>
                                     </li>
                                     <li class="nav-item text-center mr-4 ">
-                                      <a class="nav-link " href="carrousel_principal"><img class="imageConsole trans" src="/images/imagesMegadrive/megadrive.jpg" alt="site logo" /></br>Jeux</br>Megadrive</a>
+                                      <a class="nav-link " href="carrousel_principal?console=megadrive"><img class="imageConsole trans" src="/images/imagesMegadrive/megadrive.jpg" alt="site logo" /></br>Jeux</br>Megadrive</a>
                                     </li>
                                     <li class="nav-item text-center mr-4 ">
-                                      <a class="nav-link " href="carrousel_principal"><img class="imageConsole trans" src="/images/imagesPcEngine/pcEngine.jpg" alt="site logo" /></br>Jeux</br>PC Engine </a>
+                                      <a class="nav-link " href="carrousel_principal?console=pcEngine"><img class="imageConsole trans" src="/images/imagesPcEngine/pcEngine.jpg" alt="site logo" /></br>Jeux</br>PC Engine </a>
                                     </li>
                                     <li class="nav-item text-center">
-                                      <a class="nav-link " href="/carrousel_principal"><img class="imageConsole trans" src="/images/imagesNeoGeo/neoGeo.jpg" alt="site logo" /></br>Jeux</br>Neo-Geo</a>
+                                      <a class="nav-link " href="/carrousel_principal?console=neoGeo"><img class="imageConsole trans" src="/images/imagesNeoGeo/neoGeo.jpg" alt="site logo" /></br>Jeux</br>Neo-Geo</a>
                                     </li> 
                                 </ul> 
                             </div>                      
