--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -22,7 +22,7 @@
                     </li>
 
                 <li class="nav-item">
-                        <a class="nav-link text-white bg-info " href="/thumbnails">Voir tous les articles</a>
+                        <a class="nav-link text-white bg-info " href="/ideas/public">Voir tous les articles</a>
                     </li>
 
                 <li class="nav-item">
